<package format="3">
  <name>dog_urdf</name>
  <version>1.0.0</version>
  <description>URDF description package for quadruped robot</description>
  <maintainer email="grayerd@example.com">grayerd</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>